# mcp2p

./: README.md
server/: Cargo.toml
server/src/: main.rs
server/test-client/src/: main.rs
