[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "relay-server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "relay-server"
path = "src/main.rs"

[[bin]]
path = "test-client/src/main.rs"
name = "test-client"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.0.0", features = ["alloc"] }
